cmake_minimum_required(VERSION 3.14)
project(Algorithms)

set(CMAKE_CXX_STANDARD 11)

ADD_SUBDIRECTORY(algorithmPractise/JZOffer/tree)
ADD_SUBDIRECTORY(algorithmPractise/JZOffer/dp)
ADD_SUBDIRECTORY(algorithmPractise/JZOffer/binaryFind)
ADD_SUBDIRECTORY(algorithmPractise/JZOffer/backtracking)
ADD_SUBDIRECTORY(algorithmPractise/Day0/pre_sum)
ADD_SUBDIRECTORY(algorithmPractise/Day1/pre_sum)
ADD_SUBDIRECTORY(algorithmPractise/Day2/pre_sum)
ADD_SUBDIRECTORY(algorithmPractise/Day3/diff)
ADD_SUBDIRECTORY(algorithmPractise/Day4/sliding_window)
ADD_SUBDIRECTORY(algorithmPractise/Day5/sliding_window)