include_directories(.)

add_executable(isSymmetric isSymmetric.cpp)
add_executable(isSubTree isSubTree.cpp)
add_executable(mirrorTree mirrorTree.cpp)
add_executable(rebuildTree rebuildTree.cpp)
add_executable(kthLargest kthLargest.cpp)
add_executable(maxDepth maxDepth.cpp)
add_executable(levelOrder levelOrder.cpp)
add_executable(levelOrderII levelOrderII.cpp)
add_executable(levelOrderIII levelOrderIII.cpp)
add_executable(pathSum pathSum.cpp)
add_executable(isBalanced isBalanced.cpp)
add_executable(lowestCommonAncestor lowestCommonAncestor.cpp)
add_executable(lowestCommonAncestorSearchTree lowestCommonAncestorSearchTree.cpp)